feature: [174] Apply formatting